--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "devDependencies": {
     "mocha": "1.14.0",
     "chai": "1.8.1",
-    "sinon": "1.7.3"
+    "sinon": "1.7.3",
+    "rewire": "*"
   }
 }
